--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -22,7 +22,7 @@
         <h2>회원 가입</h2>
     </div>
     <h4 class="mb-3">회원 정보 입력</h4>
-    <form action="/sign" th:action th:object="${userDto}"  method="post">
+    <form action="/sign" th:object="${userDto}"  method="post">
         <div>
             <label for="username">로그인 ID</label>
             <input type="text" id="username"  th:field="*{username}"  class="form-control" placeholder="ID 를 입력하세요.">
@@ -32,8 +32,8 @@
             <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="사용하실 비밀번호를 입력하세요.">
         </div>
         <div>
-            <label for="password-chk">비밀번호 확인</label>
-            <input type="password-chk" id="password-chk" th:field="*{passwordChk}" class="form-control" placeholder="비밀번호를 확인합니다. 한번 더 입력해주세요.">
+            <label for="passwordChk">비밀번호 확인</label>
+            <input type="password" id="passwordChk" th:field="*{passwordChk}" class="form-control" placeholder="비밀번호를 확인합니다. 한번 더 입력해주세요.">
         </div>
         <div>
             <label for="email">이메일</label>
