--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,19 +27,23 @@
     <div>
       <label for="username">로그인 ID</label>
       <input type="text" id="username"  th:field="*{username}" class="form-control" placeholder="ID 를 입력하세요.">
-
+    </div>
     <div>
       <label for="password">비밀번호</label>
       <input type="password" id="password"  th:field="*{password}" class="form-control" placeholder="사용하실 비밀번호를 입력하세요.">
-
     </div>
-
+    <hr class="my-4">
+    <div class="row">
       <div class="col">
-
-        <div class="col">
           <button class="w-100 btn btn-primary btn-lg" type="submit"> 로그인 </button>
-        </div>
       </div>
+      <div class="col">
+        <button class="w-100 btn btn-secondary btn-lg"
+                onclick="location.href='items.html'"
+                th:onclick="|location.href='@{http://localhost:8080/sign}'|"
+                type="button">회원 가입</button>
+      </div>
+<!--      </div>-->
     </div>
   </form>
 </div> <!-- /container -->
